fixed the vertical-align: top issue on the side and main content areas.

--- a/sites/all/themes/laporteLibrary/assets/less/frontPage.less
+++ b/sites/all/themes/laporteLibrary/assets/less/frontPage.less
@@ -106,8 +106,8 @@
   .view-newest-article-blocks{
     display:block;
     justify-content: space-around;
-    //flex-flow: row wrap;
-    flex-flow: row;
+    flex-flow: row wrap;
+    //flex-flow: row;
   } 
   .views-row{
     display:inline-block;
@@ -145,7 +145,7 @@
 .tagRow,.subTitleElement{
   padding:.5em;
   display:flex;
-  //justify-content: space-around;
+  justify-content: space-around;
   flex-flow: row wrap;
   //flex-flow: row;
   align-conent:flex-start;
