--- a/sites/all/themes/laporteLibrary/assets/less/layout.less
+++ b/sites/all/themes/laporteLibrary/assets/less/layout.less
@@ -157,6 +157,7 @@ aside {
   width:61.5219em;
   margin: 0 0.5em;
   display:inline-flex;
+  vertical-align: top;
   .region-content{
     flex:100%;
   }
@@ -165,6 +166,7 @@ aside {
   width: 23.9395em;
   margin: 0 0.5em;
   display:inline-flex;
+  vertical-align: top;
   .region-rightside,#rightSide{
     flex:100%;
   }
@@ -462,7 +464,7 @@ input.noveListSubmit{
   height: 100%;
 }
 iframe{
-  display:none;
+  //display:none;
 }
 .user-picture img{
   height:40px;
